--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
   <div class="row justify-content-center">
 
-      <div class="col-md-6 col-sm-6 col-6">
+      <div class="col-md-6 col-sm-6 col-6  text-center">
     
         <p>Achievements</p>
         <hr class="visible-xs" >
